objects/ssot__ClinicalAlert__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ClinicalAlertCodeDescription__c</fullName>
        <label>Clinical Alert Code Description</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ClinicalAlertIssueCategory__c</fullName>
        <label>Clinical Alert Issue Category</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ClinicalAlertStatus__c</fullName>
        <label>Clinical Alert Status</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ClinicalEncounterId__c</fullName>
        <label>Clinical Encounter</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CodeId__c</fullName>
        <label>Code Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EndDate__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Clinical Alert Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RaisedById__c</fullName>
        <label>Raised By</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RaisedByObject__c</fullName>
        <label>Raised By Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StartDate__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__SubjectId__c</fullName>
        <label>Subject</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SubjectObject__c</fullName>
        <label>Subject Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716666661036_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ClinicalAlert_ClinicalEncounterId_ma_rel</label>
        <referenceTo>ssot__ClinicalEncounter__dlm</referenceTo>
        <relationshipLabel>ClinicalAlert_ClinicalEncounterId_ma_rel</relationshipLabel>
        <relationshipName>rel_1716666661036_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716726049092_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ClinicalAlert_RaisedById_map_Patient_rel</label>
        <referenceTo>ssot__PatientRegisteredDevice__dlm</referenceTo>
        <relationshipLabel>ClinicalAlert_RaisedById_map_Patient_rel</relationshipLabel>
        <relationshipName>rel_1716726049092_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716726050509_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ClinicalAlert_SubjectId_map_Medicati_rel</label>
        <referenceTo>ssot__Medication__dlm</referenceTo>
        <relationshipLabel>ClinicalAlert_SubjectId_map_Medicati_rel</relationshipLabel>
        <relationshipName>rel_1716726050509_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>